--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <script src='//js.zapjs.com/js/download.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js'></script>
-    <title>React App</title>
+    <title>excited-men </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
